# OMNISCIENCE

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
omniscience/: __init__.py  dispatcher.py  main.py
omniscience/cli/: app.py
omniscience/core/: config.py  report.py  types.py
omniscience/gui/: app.py
omniscience/hardware/: __init__.py  resource_manager.py
omniscience/recon/: __init__.py  statistical.py
omniscience/solvers/: __init__.py  agcd.py  algebraic.py  bruteforce_gpu.py  classical.py  cross_cipher.py  dlog.py  ecdh.py  elliptic_curve.py  factorization.py  hybrid_scheme.py  lattice.py  lattice_advanced.py  mitm.py  neural.py  oracle.py  sage_bridge.py  smt.py  symmetric.py
tests/: test_basic.py
